# data_ingester

./: .gitignore  README.md  pyproject.toml
ingester/: main.py
ingester/src/: utils.py
ingester/src/abstract/: __init__.py  client.py  writer.py
ingester/src/base/: __init__.py  endpoint.py  path.py
ingester/src/base/client/: base_client.py
ingester/src/base/writer/: __init__.py  file_writer.py  kafka_writer.py  sql_writer.py  stream_writer.py
ingester/src/cli/: __init__.py  cli.py  new.py  sources.py
ingester/src/conf/: __init__.py  global_settings.py
ingester/src/contrib/cookiecutter/source/: cookiecutter.json
ingester/src/contrib/cookiecutter/source/{{cookiecutter.classname_snake}}/: pyproject.toml
ingester/src/contrib/cookiecutter/source/{{cookiecutter.classname_snake}}/{{ cookiecutter.classname_snake }}/: __init__.py  cli.py  client.py  endpoints.py  writers.py
