[project]
name = "data-ingester"
description = "Cli application built with click, used for fetching osrs data"
version = "0.0.1"
authors = [
    {name= "Žygimantas Bičkus"}
]
maintainers = [
  {name = "Žygimantas Bičkus"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11.2"
dependencies = [
    "arrow==1.3.0",
    "binaryornot==0.4.4",
    "certifi==2025.6.15",
    "chardet==5.2.0",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cookiecutter==2.6.0",
    "idna==3.10",
    "Jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "Pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-slugify==8.0.4",
    "PyYAML==6.0.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "six==1.17.0",
    "text-unidecode==1.3",
    "types-python-dateutil==2.9.0.20250516",
    "urllib3==2.5.0",
]

[project.scripts]
ingester = "ingester.src.cli:ingester"

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "ingester"